# hello-opencv

./: .gitignore  CMakeLists.txt  README.md
Hello-OpenCV/: CodeBook.hpp  CodeElement.hpp  Helper.cpp  Helper.hpp  ImageProcessor.cpp  ImageProcessor.hpp  VideoProcessor.cpp  VideoProcessor.hpp  main.cpp  main.hpp
Hello-OpenCV.xcodeproj/: project.pbxproj
Hello-OpenCV.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
